page displays city name and weather info

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1> Weather Dashboard</h1>
 </header>
 
-<main class="flex-row justify-space-between">
+<main class="row flex-row justify-space-between">
     <div class="col-4">
         <div class="card city-container">
             <h3 class="card-header">Search for a City:</h3>
@@ -23,6 +23,8 @@
         </div>
     </div>
     <div class="col-8" id="weather-container">
+        <div id="current-weather"></div>
+        <div id="forecast"></div>
         
 
     </div>
