added ability to save and load in local storage

--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
                 <h3 class="card-header">Search for a City:</h3>
                 <form id="city-search" class="card-body">
                 <input name="city-name" id="city-name" type="text" autofocus="true" class="form-input"/>
-                <button type="submit" class="btn"></button>
+                <button type="submit" class="btn">Submit</button>
                 </form>
+            </div>
+            <div class="card" id="city-history"></div>
             </div>
         </div>
 
         <div class="col-8" id="weather-container">
             <div id="current-weather"></div>
-            <div id="forecast"></div>
+            <div id="forecast" class="row"></div>
         </div>
     </main>
 
