--- a/index.html
+++ b/index.html
@@ -14,19 +14,24 @@
     </header>
 
     <main class="row flex-row justify-space-between">
-        <div class="col-4">
+        <div class="col-lg-4 col-sm-12">
             <div class="card city-container">
                 <h3 class="card-header">Search for a City:</h3>
                 <form id="city-search" class="card-body">
                 <input name="city-name" id="city-name" type="text" autofocus="true" class="form-input"/>
-                <button type="submit" class="btn">Submit</button>
+                <button type="submit" class="btn submit-btn">
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
+                    <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+                    </svg>
+                </button>
                 </form>
             </div>
             <div class="card" id="city-history"></div>
             </div>
         </div>
 
-        <div class="col-8" id="weather-container">
+        <div class="col-lg-8 col-sm-12" id="weather-container">
             <div id="current-weather"></div>
             <div id="forecast" class="row"></div>
         </div>
